samples/_failures_safe/1761205863_a11f0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5319e6d3.c: In function ‘main’:
./samples/SAFE/__tmp_5319e6d3.c:171:12: error: missing terminating " character
  171 |     printf("First matrix:\n
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5319e6d3.c:171:5: error: expected expression at end of input
  171 |     printf("First matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_5319e6d3.c:171:5: error: expected declaration or statement at end of input
